# vlGui

./: .clang-format  .gitignore  README.md  proj.cmake  vlGuiProj.cmake
doc/: Doxyfile
doc/drawio/: .$RefManual.drawio.bkp  .$RefManual.drawio.dtmp  RefManual.drawio  demo.drawio
doc/html/: annotated.html  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_651562d8bf6cfd3e81eff5b570d7df50.html  dir_651562d8bf6cfd3e81eff5b570d7df50_dep.dot  dir_651562d8bf6cfd3e81eff5b570d7df50_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  (+136 more)
example/: bitmap.h  example.c  games.c  games.h  games_glatSnake.c  games_glatSnake.h
example/smallRiceCake/: CMakeLists.txt  btIcon.h  leftArrow.h  main.c  rightArrow.h  ui.h  ui_home.c  ui_menu.c
example/smallRiceCake/pictures/: ble.c  btIcon.h  setting.c  update.c
example/smallRiceCake/pictures/bitmap/: vlGui_bitmapPetEgg.h
example/smallRiceCake/pictures/drawio/: icons.drawio
example/smallRiceCake/pictures/ePet/: test.py
example/smallRiceCake/pictures/ePet/bitmap/: vlGui_bitmapDog.h  vlGui_bitmapDog1.h  vlGui_bitmapPet1.h  vlGui_bitmapShirop.h  vlGui_bitmapShirop2.h  vlGui_bitmapShirop3.h  vlGui_bitmapShirop4.h  vlGui_bitmapShirop5.h
example/smallRiceCake/pictures/ePet/inc/: vlGui_bmpBaby1.h  vlGui_bmpBaby1_gloomy.h  vlGui_bmpBlood.h  vlGui_bmpBloodEmpty.h  vlGui_bmpEducation.h  vlGui_bmpEducationEmpty.h  vlGui_bmpFood.h  vlGui_bmpFoodEmpty.h  vlGui_bmpHeart.h  vlGui_bmpHeartEmpty.h
example/smallRiceCake/ui/: ui.h  ui_home.c  ui_menu.c
example/smallRiceCake/ui/ePet/: ePet.h  ePet_babyStage.c  ePet_window.c
example/widgets/: CMakeLists.txt  games.c  games.h  games_glatSnake.c  games_glatSnake.h  main.c
inc/: vlGui.h  vlGui_base.h  vlGui_button.h  vlGui_clock.h  vlGui_config.h  vlGui_engine.h  vlGui_fonts.h  vlGui_iconMenu.h  vlGui_input.h  vlGui_menu.h  vlGui_msgBox.h  vlGui_port.h  vlGui_progressBar.h  vlGui_selector.h  vlGui_window.h  vlonGui.h  vlonGui_base.h  vlonGui_button.h  vlonGui_clock.h  vlonGui_config.h  vlonGui_engine.h  vlonGui_fonts.h  vlonGui_input.h  vlonGui_menu.h  vlonGui_msgBox.h  vlonGui_progressBar.h  vlonGui_selector.h  vlonGui_window.h
port/: vlGui_port.c  vlGui_portPriv.h  vlonGui_port.c
src/: vlGui.c  vlGui_base.c  vlGui_button.c  vlGui_clock.c  vlGui_engine.c  vlGui_iconMenu.c  vlGui_input.c  vlGui_menu.c  vlGui_msgBox.c  vlGui_progressBar.c  vlGui_selector.c  vlGui_window.c  vlonGui.c  vlonGui_base.c  vlonGui_button.c  vlonGui_clock.c  vlonGui_engine.c  vlonGui_input.c  vlonGui_menu.c  vlonGui_msgBox.c  vlonGui_progressBar.c  vlonGui_selector.c  vlonGui_window.c
tools/: bdf2vlonGui.py  bleIcon.c  file2header.py  font.c  fontsGen.py  fontsGen2.py  leftArrow.h  picture2array.py  requirements.txt  result-12.bdf  test.py  testfont  vlGui_chinese2gb2312.py  vlGui_font.c  vlGui_picture2array.py  vlonGui_font.c
(+48 files in other folders)
